--- a/Login_Database/templates/quiz_summary.html
+++ b/Login_Database/templates/quiz_summary.html
@@ -66,6 +66,7 @@
         {% endfor %}
         <div class="actions">
             <a href="/create_quiz"><button>Create Another Quiz</button></a>
+            <a href="/select_quiz"><button>Take a Quiz</button></a>
             <a href="/dashboard"><button>Go Back to Home</button></a>
         </div>
     </div>
