--- a/Login_Database/templates/welcome.html
+++ b/Login_Database/templates/welcome.html
@@ -55,6 +55,7 @@
         
         <div class="button-group">
             <a href="/create_quiz"><button>Create Practice Quiz</button></a>
+            <a href="/select_quiz"><button>Take a Quiz</button></a>
         </div>
     </div>
 
