--- a/Login_Database/templates/welcome.html
+++ b/Login_Database/templates/welcome.html
@@ -60,6 +60,8 @@
     </div>
 
     <script src="{{ url_for('static', filename='studyeasy.js') }}" defer></script>
+
+<a href="/notes"><button>Take Notes</button></a>
 </body>
 </html>
 
