-Added return to welcome page from Notes.html

--- a/Login_Database/templates/notes.html
+++ b/Login_Database/templates/notes.html
@@ -18,5 +18,6 @@
             <small>Created at: {{ note['created_at'] }}</small>
         </div>
     {% endfor %}
+    <a href="/dashboard" class="btn btn-primary">Back to Welcome Page</a>
 </body>
 </html>
